tests/parse/fail/illegal-60.dcf
int x = a;
int y = 1 + 2;